refactor(core): clean up HtmlReporter imports and code consistency
- Remove unused java.util.logging.Level import
- Add Locale, DoubleUnaryOperator, IntFunction imports
- Replace all fully-qualified type names in buildTrendChartCard with
  simple names (DateTimeFormatter, ZoneId, Locale.ROOT, IntFunction,
  DoubleUnaryOperator)
- Replace java.util.Collections.emptyList() with List.of()
- Fix CSS bug: th.num and .footer rules were merged on one line with
  stray tab characters in the HTML head template
- Add missing braces to single-statement if blocks in escHtml/leafOf